--- a/lib/postgres.org
+++ b/lib/postgres.org
@@ -41,7 +41,8 @@ the database access credentials from the =PGHOST=, =PGUSER=, and =PGPASSWORD=
 environment variables. From your workstation, you can retrieve the password
 directly from the Secret stored in the cluster and set this variable:
 
-#+begin_src shell :noweb yes :eval never-export :results none :session postgres
+#+name: postgres-environment
+#+begin_src shell :noweb yes :eval never-export :results none :session postgres-psql
 export KUBECONFIG=<<KUBE_CONFIG>>
 export PGPASSWORD=$(kubectl -n postgres get secret/postgres-postgresql \
   -o jsonpath='{.data.postgresql-password}' | base64 -d)
@@ -50,14 +51,26 @@ export PGDATABASE=<<POSTGRES_DATABASE_NAME>>
 export PGUSER=<<POSTGRES_DATABASE_USER>>
 #+end_src
 
-By setting these variables within a block marked =:session postgres=,
-these variables are available in other code blocks marked with the same session
-(or until the session is terminated and/or closing the =postgres= buffer
-in Emacs):
+By setting these variables within a block marked =:session postgres-psql=, these
+variables are available in other code blocks marked with the same session (or
+until the session is terminated and/or closing the =postgres-psql= buffer in
+Emacs) or they can be re-acquired by including the =<<postgres-environment>>=
+NoWeb reference to create new sessions. 
 
-#+begin_src shell :noweb yes :eval never-export :session postgres
+Here is usage of =psql= inside of the existing session:
+
+#+begin_src shell :noweb yes :eval never-export :session postgres-psql
 psql -c 'SELECT 1'
 #+end_src
+
+And here is usage without any session (takes longer because it has to re-acquire
+=PGPASSWORD= from the Secret again):
+
+#+begin_src shell :noweb yes :eval never-export
+<<postgres-environment>>
+psql -c 'SELECT 1'
+#+end_src
+
 * postgres/kustomization.yaml
 #+begin_src yaml :noweb yes :eval no :tangle postgres/kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
