--- a/lib/postgres.org
+++ b/lib/postgres.org
@@ -1,5 +1,6 @@
 * COMMENT Postgres Config
 You must add the following config to your Org document (un-comment):
+#+BEGIN_COMMENT
 # ** Postgres Config
 # *** POSTGRES_PVC_SIZE
 #     How big do you want the database volume?
@@ -25,6 +26,7 @@ You must add the following config to your Org document (un-comment):
 #     #+begin_src config :noweb yes :eval no
 #     postgres
 #     #+end_src
+#+END_COMMENT
 
 * Access PostgreSQL from your workstation
 If you want to access the PostgreSQL database from your workstation, you can
