--- a/lib/piwigo.org
+++ b/lib/piwigo.org
@@ -179,7 +179,7 @@ spec:
           - name: data
             mountPath: /config
         - name: piwigo-s3-backup
-          image: <<PIWIGO_RESTIC_BACKUP_IMAGE>>
+          image: lobaro/restic-backup-docker:1.2-0.9.4
           env:
           - name: RESTIC_REPOSITORY
             valueFrom:
