--- a/lib/piwigo.org
+++ b/lib/piwigo.org
@@ -103,7 +103,7 @@ S3_SECRET_ACCESS_KEY=xxxxxxxx
 SRC_DIR=${HOME}/git/clusters/barrel.rymcg.tech/
 kubectl create secret generic piwigo-s3-backup \
    --namespace piwigo --dry-run=client -o json \
-   --from-literal=RESTIC_REPOSITORY=s3://${S3_ENDPOINT}/${S3_BUCKET} \
+   --from-literal=RESTIC_REPOSITORY=s3:https://${S3_ENDPOINT}/${S3_BUCKET} \
    --from-literal=S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID} \
    --from-literal=S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY} \
    | kubeseal -o yaml > \
