--- a/lib/piwigo.org
+++ b/lib/piwigo.org
@@ -110,13 +110,13 @@ kubectl create secret generic piwigo-s3-backup \
   ${SRC_DIR}/piwigo/piwigo-s3-backup.sealed_secret.yaml
 #+end_src
 
-Once you've committed and pushed, and flux has redeployed, execute the commands
-to initialize the repository:
+The backup is regularly scheduled, but you can trigger the initial backup to
+occur immediately:
 
-#+begin_src shell :noweb yes :eval never-export :exports code :results output
+#+begin_src shell :noweb yes :eval never-export :exports code
 <<kubectl>> -n piwigo \
     exec piwigo-0 --container piwigo-s3-backup -t -- \
-    restic init
+    /bin/backup
 #+end_src
 
 * piwigo/kustomization.yaml
