--- a/lib/piwigo.org
+++ b/lib/piwigo.org
@@ -61,7 +61,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: mariadb
+  name: piwigo-mariadb
   namespace: piwigo
 spec:
   chart:
