--- a/lib/piwigo.org
+++ b/lib/piwigo.org
@@ -61,7 +61,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: piwigo-mariadb
+  name: mariadb
   namespace: piwigo
 spec:
   chart:
@@ -71,6 +71,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: bitnami
+  releaseName: mariadb
   interval: 5m0s
   values:
     auth:
