PIWIGO_MARIADB_BACKUP_IMAGE

--- a/lib/piwigo.org
+++ b/lib/piwigo.org
@@ -86,7 +86,7 @@ spec:
           claimName: mariadb-backups
       sidecars:
       - name: mariadb-backups
-        image: woolfg/mysql-backup-sidecar:v0.3.1-mariadb-10.4
+        image: <<PIWIGO_MARIADB_BACKUP_IMAGE>>
         env:
         - name: CRON_SCHEDULE
           value: "30 2 * * *"
